@@ -40,14 +40,14 @@ class DataConverter_FMDateTime
             $sep = explode(' ', $str);
             $comp = explode('/', $sep[0]);
             $dtObj = new DateTime($comp[2] . '-' . $comp[0] . '-' . $comp[1] . ' ' . $sep[1]);
-            $fmt = '%x %T';
+            $fmt = '%x %H:%M:%S';
         } elseif (($sp === FALSE) && ($slash === 2) && ($colon === 0)) {
             $comp = explode('/', $str);
             $dtObj = new DateTime($comp[2] . '-' . $comp[0] . '-' . $comp[1]);
             $fmt = '%x';
         } elseif (($sp === FALSE) && ($slash === 0) && ($colon === 2)) {
             $dtObj = new DateTime($str);
-            $fmt = '%T';
+            $fmt = '%H:%M:%S';
         }
         if ($dtObj === false) {
             return $str;
